Add new website component `RemoteSource`

--- a/website/src/content/docs/json/parse.mdx
+++ b/website/src/content/docs/json/parse.mdx
@@ -3,6 +3,7 @@ title: Guide Documents > JSON < parse() functions
 ---
 import { Tabs } from "nextra/components";
 
+import LocalSource from "../../../components/LocalSource";
 import RemoteSource from "../../../components/RemoteSource";
 
 ## `parse()` functions
@@ -23,8 +24,8 @@ export namespace json {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -35,8 +36,8 @@ export namespace json {
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/Primitive.ts"
+    <LocalSource 
+      path="src/Primitive.ts"
       filename="typia/Primitive.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -56,14 +57,14 @@ Look at the below code, then you may understand how the `typia.json.assertParse<
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/json/assertParse.ts"
+    <LocalSource 
+      path="examples/src/json/assertParse.ts"
       filename="examples/src/json/assertParse.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/json/assertParse.js"
+    <LocalSource 
+      path="examples/bin/json/assertParse.js"
       filename="examples/bin/json/assertParse.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -89,8 +90,8 @@ export namespace json {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -101,8 +102,8 @@ export namespace json {
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/Primitive.ts"
+    <LocalSource 
+      path="src/Primitive.ts"
       filename="typia/Primitive.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -116,14 +117,14 @@ Just look at the code below, then you may understand how to use it.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/json/createIsParse.ts"
+    <LocalSource 
+      path="examples/src/json/createIsParse.ts"
       filename="examples/src/json/createIsParse.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/json/createIsParse.js"
+    <LocalSource 
+      path="examples/bin/json/createIsParse.js"
       filename="examples/bin/json/createIsParse.js"
       showLineNumbers />
   </Tabs.Tab>
