--- a/website/src/content/docs/llm/application.mdx
+++ b/website/src/content/docs/llm/application.mdx
@@ -3,6 +3,7 @@ title: Guide Documents > Large Language Model > application() function
 ---
 import { Callout, Tabs } from "nextra/components";
 
+import LocalSource from "../../../components/LocalSource";
 import RemoteSource from "../../../components/RemoteSource";
 import ValidationFeedbackExampleSnippet from "../../../snippets/ValidationFeedbackExampleSnippet.mdx";
 import ValidatorSupportMatrixSnippet from "../../../snippets/ValidatorSupportMatrixSnippet.mdx";
@@ -109,26 +110,26 @@ Structured output is another feature of LLM. The "structured output" means that 
     <code>IBbsArticle</code>,
   ]}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/llm/application.ts"
+    <LocalSource 
+      path="examples/src/llm/application.ts"
       filename="example/src/llm/application.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/llm/application.js"
+    <LocalSource 
+      path="examples/bin/llm/application.js"
       filename="example/bin/llm/application.js"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/llm/BbsArticleService.ts"
+    <LocalSource 
+      path="examples/src/llm/BbsArticleService.ts"
       filename="examples/src/llm/BbsArticleService.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/llm/IBbsArticle.ts"
+    <LocalSource 
+      path="examples/src/llm/IBbsArticle.ts"
       filename="examples/src/llm/IBbsArticle.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -180,26 +181,26 @@ Here is the example separating the parameter schemas.
     <code>IBbsArticle</code>,
   ]}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/llm/application-separate.ts"
+    <LocalSource 
+      path="examples/src/llm/application-separate.ts"
       filename="example/src/llm/application-separate.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/llm/application-separate.js"
+    <LocalSource 
+      path="examples/bin/llm/application-separate.js"
       filename="example/bin/llm/application-separate.js"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/llm/BbsArticleService.ts"
+    <LocalSource 
+      path="examples/src/llm/BbsArticleService.ts"
       filename="examples/src/llm/BbsArticleService.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/llm/IBbsArticle.ts"
+    <LocalSource 
+      path="examples/src/llm/IBbsArticle.ts"
       filename="examples/src/llm/IBbsArticle.ts"
       showLineNumbers />
   </Tabs.Tab>
