--- a/website/src/content/docs/llm/chat.mdx
+++ b/website/src/content/docs/llm/chat.mdx
@@ -3,7 +3,7 @@ title: Guide Documents > Large Language Model > AI Chatbot Development
 ---
 import { Callout, Tabs } from "nextra/components";
 
-import RemoteSource from "../../../components/RemoteSource";
+import LocalSource from "../../../components/LocalSource";
 import ValidatorSupportMatrixSnippet from "../../../snippets/ValidatorSupportMatrixSnippet.mdx";
 
 ## Agentica
@@ -51,14 +51,14 @@ await agent.conversate("Hello, I want to create an article.");
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/llm/BbsArticleService.ts"
+    <LocalSource 
+      path="examples/src/llm/BbsArticleService.ts"
       filename="examples/src/llm/BbsArticleService.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/llm/IBbsArticle.ts"
+    <LocalSource 
+      path="examples/src/llm/IBbsArticle.ts"
       filename="examples/src/llm/IBbsArticle.ts"
       showLineNumbers />
   </Tabs.Tab>
