--- a/website/src/content/docs/validators/tags.mdx
+++ b/website/src/content/docs/validators/tags.mdx
@@ -5,7 +5,7 @@ import Alert from "@mui/material/Alert";
 import AlertTitle from "@mui/material/AlertTitle";
 import { Tabs } from "nextra/components";
 
-import RemoteSource from "../../../components/RemoteSource";
+import LocalSource from "../../../components/LocalSource";
 
 ## Outline
 
@@ -26,14 +26,14 @@ Therefore, don't be afraid `typia` uses only pure TypeScript types for type vali
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/is-type-tag.ts" 
+    <LocalSource 
+      path="examples/src/validators/is-type-tag.ts" 
       filename="examples/src/validators/is-type-tag.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/is-type-tag.js" 
+    <LocalSource 
+      path="examples/bin/validators/is-type-tag.js" 
       filename="examples/bin/validators/is-type-tag.js" 
       showLineNumbers />
   </Tabs.Tab>
@@ -116,14 +116,14 @@ Also, if you need custom validation logic, just make it by yourself referencing 
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/is-type-tag.ts" 
+    <LocalSource 
+      path="examples/src/validators/is-type-tag.ts" 
       filename="examples/src/validators/is-type-tag.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/is-type-tag.js" 
+    <LocalSource 
+      path="examples/bin/validators/is-type-tag.js" 
       filename="examples/bin/validators/is-type-tag.js" 
       showLineNumbers />
   </Tabs.Tab>
@@ -206,14 +206,14 @@ Second, to support [Prisma](../utilization/prisma). If a comment is created in t
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/is-comment-tag.ts" 
+    <LocalSource 
+      path="examples/src/validators/is-comment-tag.ts" 
       filename="examples/src/validators/is-comment-tag.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/is-comment-tag.js" 
+    <LocalSource 
+      path="examples/bin/validators/is-comment-tag.js" 
       filename="examples/bin/validators/is-comment-tag.js" 
       showLineNumbers />
   </Tabs.Tab>
@@ -228,26 +228,26 @@ Second, to support [Prisma](../utilization/prisma). If a comment is created in t
     <code>Pattern.ts</code>,
 ]}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/tags/TagBase.ts" 
+    <LocalSource 
+      path="src/tags/TagBase.ts" 
       filename="typia/tags/TagBase.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/tags/Minimum.ts" 
+    <LocalSource 
+      path="src/tags/Minimum.ts" 
       filename="typia/tags/Minimum.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/tags/Type.ts" 
+    <LocalSource 
+      path="src/tags/Type.ts" 
       filename="typia/tags/Type.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/tags/Pattern.ts" 
+    <LocalSource 
+      path="src/tags/Pattern.ts" 
       filename="typia/tags/Pattern.ts" 
       showLineNumbers />
   </Tabs.Tab>
@@ -265,14 +265,14 @@ Here is the example code, and I think that it may easy to understand.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/is-custom-tags.ts" 
+    <LocalSource 
+      path="examples/src/validators/is-custom-tags.ts" 
       filename="examples/src/validators/is-custom-tags.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/is-custom-tags.js" 
+    <LocalSource 
+      path="examples/bin/validators/is-custom-tags.js" 
       filename="examples/bin/validators/is-custom-tags.js" 
       showLineNumbers />
   </Tabs.Tab>
