--- a/website/src/content/docs/misc.mdx
+++ b/website/src/content/docs/misc.mdx
@@ -5,6 +5,7 @@ import { Tabs } from 'nextra/components'
 import Alert from '@mui/material/Alert';
 import AlertTitle from '@mui/material/AlertTitle';
 
+import LocalSource from '../../components/LocalSource';
 import RemoteSource from "../../components/RemoteSource";
 
 ## `misc` module
@@ -35,8 +36,8 @@ export namespace misc {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -47,8 +48,8 @@ export namespace misc {
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/Resolved.ts"
+    <LocalSource 
+      path="src/Resolved.ts"
       filename="typia/Resolved.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -64,14 +65,14 @@ When you want to copy an instance, just call `typia.misc.clone()` function. It w
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/misc/assertClone.ts"
+    <LocalSource 
+      path="examples/src/misc/assertClone.ts"
       filename="examples/src/misc/assertClone.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/misc/assertClone.js"
+    <LocalSource 
+      path="examples/bin/misc/assertClone.js"
       filename="examples/bin/misc/assertClone.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -98,8 +99,8 @@ export function createValidatePrune<T>(): (input: T | unknown) => IValidation<T>
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -121,14 +122,14 @@ When you want to remove every extra properties that are not defined in the type 
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/misc/assertPrune.ts"
+    <LocalSource 
+      path="examples/src/misc/assertPrune.ts"
       filename="examples/src/misc/assertPrune.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/misc/assertPrune.js"
+    <LocalSource 
+      path="examples/bin/misc/assertPrune.js"
       filename="examples/bin/misc/assertPrune.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -149,14 +150,14 @@ When you call `typia.misc.literals<T>()` function with union literal type, it re
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/misc/literals.ts"
+    <LocalSource 
+      path="examples/src/misc/literals.ts"
       filename="examples/src/misc/literals.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/misc/literals.js"
+    <LocalSource 
+      path="examples/bin/misc/literals.js"
       filename="examples/bin/misc/literals.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -194,8 +195,8 @@ export namespace notations {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -206,8 +207,8 @@ export namespace notations {
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/CamelCase.ts"
+    <LocalSource 
+      path="src/CamelCase.ts"
       filename="typia/CamelCase.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -225,14 +226,14 @@ When you need type safe functions, you can utilize below them.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/notations/camel.ts"
+    <LocalSource 
+      path="examples/src/notations/camel.ts"
       filename="examples/src/notations/camel.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/notations/camel.js"
+    <LocalSource 
+      path="examples/bin/notations/camel.js"
       filename="examples/bin/notations/camel.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -270,8 +271,8 @@ export namespace notations {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -282,8 +283,8 @@ export namespace notations {
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/PascalCase.ts"
+    <LocalSource 
+      path="src/PascalCase.ts"
       filename="typia/PascalCase.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -301,14 +302,14 @@ When you need type safe functions, you can utilize below them.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/notations/pascal.ts"
+    <LocalSource 
+      path="examples/src/notations/pascal.ts"
       filename="examples/src/notations/pascal.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/notations/pascal.js"
+    <LocalSource 
+      path="examples/bin/notations/pascal.js"
       filename="examples/bin/notations/pascal.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -344,8 +345,8 @@ export namespace notations {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -356,8 +357,8 @@ export namespace notations {
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/SnakeCase.ts"
+    <LocalSource 
+      path="src/SnakeCase.ts"
       filename="typia/SnakeCase.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -375,14 +376,14 @@ When you need type safe functions, you can utilize below them.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/notations/snake.ts"
+    <LocalSource 
+      path="examples/src/notations/snake.ts"
       filename="examples/src/notations/snake.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/notations/snake.js"
+    <LocalSource 
+      path="examples/bin/notations/snake.js"
       filename="examples/bin/notations/snake.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -439,8 +440,8 @@ type Query = string | URLSearchParams;
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -451,8 +452,8 @@ type Query = string | URLSearchParams;
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/Resolved.ts"
+    <LocalSource 
+      path="src/Resolved.ts"
       filename="typia/Resolved.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -477,14 +478,14 @@ Also, `typia.http.query<T>()` function does not perform validation about the dec
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/http/query.ts"
+    <LocalSource 
+      path="examples/src/http/query.ts"
       filename="examples/src/http/query.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/http/query.js"
+    <LocalSource 
+      path="examples/bin/http/query.js"
       filename="examples/bin/query.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -527,8 +528,8 @@ type Headers = Record<string, string | string[] | undefined>;
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -539,8 +540,8 @@ type Headers = Record<string, string | string[] | undefined>;
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/Resolved.ts"
+    <LocalSource 
+      path="src/Resolved.ts"
       filename="typia/Resolved.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -587,14 +588,14 @@ Also, `typia.http.headers<t>()` function does not perform validation about the d
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/http/headers.ts"
+    <LocalSource 
+      path="examples/src/http/headers.ts"
       filename="examples/src/http/headers.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/http/headers.js"
+    <LocalSource 
+      path="examples/bin/http/headers.js"
       filename="examples/bin/http/headers.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -617,8 +618,8 @@ export namespace http {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+    <LocalSource 
+      path="src/TypeGuardError.ts"
       filename="typia/TypeGuardError.ts"
       showLineNumbers />
   </Tabs.Tab>
@@ -632,14 +633,14 @@ Also, `typia.http.parameter<T>()` performs type assertion to the decoded value b
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/http/parameter.ts"
+    <LocalSource 
+      path="examples/src/http/parameter.ts"
       filename="examples/src/http/parameter.ts"
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-    <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/http/parameter.js"
+    <LocalSource 
+      path="examples/bin/http/parameter.js"
       filename="examples/bin/http/parameter.js"
       showLineNumbers />
   </Tabs.Tab>
